--- a/docs/_indicators/.unimplemented/T3.md
+++ b/docs/_indicators/.unimplemented/T3.md
@@ -10,7 +10,7 @@ layout: indicator
 Created by Tim Tillson, the [T3](https://www.forexfactory.com/attachment.php/845855?attachmentid=845855&d=1322724313) indicator is a smooth moving average that reduces both lag and overshooting.
 [[Discuss] :speech_balloon:]({{site.github.repository_url}}/discussions/332 "Community discussion about this indicator")
 
-![image]({{site.baseurl}}/assets/charts/T3.png)
+![image]({{site.charturl}}/T3.png)
 
 ```csharp
 // usage
