Change CSharp code block to Python

--- a/docs/_indicators/.unimplemented/T3.md
+++ b/docs/_indicators/.unimplemented/T3.md
@@ -12,7 +12,7 @@ Created by Tim Tillson, the [T3](https://www.forexfactory.com/attachment.php/845
 
 !![image]({{site.charturl}}/T3.png)
 
-```csharp
+```python
 // usage
 IEnumerable<T3Result> results =
   quotes.GetT3(lookbackPeriods, volumeFactor);
@@ -33,7 +33,7 @@ You must have at least `6×(N-1)+100` periods of `quotes` to cover the convergen
 
 ## Response
 
-```csharp
+```python
 IEnumerable<T3Result>
 ```
 
@@ -61,7 +61,7 @@ See [Utilities and Helpers]({{site.baseurl}}/utilities#utilities-for-indicator-r
 
 ## Example
 
-```csharp
+```python
 // fetch historical quotes from your feed (your method)
 IEnumerable<Quote> quotes = GetHistoryFromFeed("MSFT");
 
