--- a/docs/_indicators/.unimplemented/T3.md
+++ b/docs/_indicators/.unimplemented/T3.md
@@ -29,7 +29,7 @@ IEnumerable<T3Result> results =
 
 You must have at least `6×(N-1)+100` periods of `quotes` to cover the convergence periods.  Since this uses a smoothing technique, we recommend you use at least `6×(N-1)+250` data points prior to the intended usage date for better precision.
 
-`quotes` is an `IEnumerable<TQuote>` collection of historical price quotes.  It should have a consistent frequency (day, hour, minute, etc).  See [the Guide]({{site.baseurl}}/guide/#historical-quotes) for more information.
+`quotes` is an `Iterable[Quote]` collection of historical price quotes.  It should have a consistent frequency (day, hour, minute, etc).  See [the Guide]({{site.baseurl}}/guide/#historical-quotes) for more information.
 
 ## Response
 
