--- a/docs/_indicators/.unimplemented/T3.md
+++ b/docs/_indicators/.unimplemented/T3.md
@@ -31,7 +31,7 @@ You must have at least `6×(N-1)+100` periods of `quotes` to cover the convergen
 
 `quotes` is an `Iterable[Quote]` collection of historical price quotes.  It should have a consistent frequency (day, hour, minute, etc).  See [the Guide]({{site.baseurl}}/guide/#historical-quotes) for more information.
 
-## Response
+## Return
 
 ```python
 IEnumerable<T3Result>
