--- a/docs/_indicators/.unimplemented/T3.md
+++ b/docs/_indicators/.unimplemented/T3.md
@@ -8,11 +8,11 @@ layout: indicator
 # {{ page.title }}
 
 Created by Tim Tillson, the [T3](https://www.forexfactory.com/attachment.php/845855?attachmentid=845855&d=1322724313) indicator is a smooth moving average that reduces both lag and overshooting.
-[[Discuss] :speech_balloon:]({{site.github.repository_url}}/discussions/332 "Community discussion about this indicator")
+[[Discuss] :speech_balloon:]({{site.github.base_repository_url}}/discussions/332 "Community discussion about this indicator")
 
-![image]({{site.baseurl}}/assets/charts/T3.png)
+![image]({{site.charturl}}/T3.png)
 
-```csharp
+```python
 // usage
 IEnumerable<T3Result> results =
   quotes.GetT3(lookbackPeriods, volumeFactor);
@@ -29,18 +29,18 @@ IEnumerable<T3Result> results =
 
 You must have at least `6×(N-1)+100` periods of `quotes` to cover the convergence periods.  Since this uses a smoothing technique, we recommend you use at least `6×(N-1)+250` data points prior to the intended usage date for better precision.
 
-`quotes` is an `IEnumerable<TQuote>` collection of historical price quotes.  It should have a consistent frequency (day, hour, minute, etc).  See [the Guide]({{site.baseurl}}/guide/#historical-quotes) for more information.
+`quotes` is an `Iterable[Quote]` collection of historical price quotes.  It should have a consistent frequency (day, hour, minute, etc).  See [the Guide]({{site.baseurl}}/guide/#historical-quotes) for more information.
 
-## Response
+## Return
 
-```csharp
+```python
 IEnumerable<T3Result>
 ```
 
 - This method returns a time series of all available indicator values for the `quotes` provided.
 - It always returns the same number of elements as there are in the historical quotes.
 - It does not return a single incremental indicator value.
-- The first `6×(N-1)` periods will have `null` values since there's not enough data to calculate.
+- The first `6×(N-1)` periods will have `None` values since there's not enough data to calculate.
 
 :hourglass: **Convergence Warning**: The first `6×(N-1)+250` periods will have decreasing magnitude, convergence-related precision errors that can be as high as ~5% deviation in indicator values for earlier periods.
 
@@ -61,7 +61,7 @@ See [Utilities and Helpers]({{site.baseurl}}/utilities#utilities-for-indicator-r
 
 ## Example
 
-```csharp
+```python
 // fetch historical quotes from your feed (your method)
 IEnumerable<Quote> quotes = GetHistoryFromFeed("MSFT");
 
