--- a/docs/_indicators/.unimplemented/T3.md
+++ b/docs/_indicators/.unimplemented/T3.md
@@ -15,7 +15,7 @@ Created by Tim Tillson, the [T3](https://www.forexfactory.com/attachment.php/845
 ```python
 // usage
 IEnumerable<T3Result> results =
-  quotes.GetT3(lookbackPeriods, volumeFactor);
+  quotes.GetT3(lookbackPeriods, volumeFactor)
 ```
 
 ## Parameters
@@ -63,8 +63,8 @@ See [Utilities and Helpers]({{site.baseurl}}/utilities#utilities-for-indicator-r
 
 ```python
 // fetch historical quotes from your feed (your method)
-IEnumerable<Quote> quotes = GetHistoryFromFeed("MSFT");
+IEnumerable<Quote> quotes = GetHistoryFromFeed("MSFT")
 
 // calculate 5-period T3
-IEnumerable<T3Result> results = quotes.GetT3(5,0.7);
+IEnumerable<T3Result> results = quotes.GetT3(5,0.7)
 ```
