--- a/docs/_indicators/T3.md
+++ b/docs/_indicators/T3.md
@@ -75,4 +75,4 @@ Created by Tim Tillson, the [T3](https://www.forexfactory.com/attachment.php/845
 ### Sources
 
 - [C# core]({{site.base_sourceurl}}/s-z/T3/T3.cs)
-- [Python wrapper]({{site.sourceurl}}/T3.py)
+- [Python wrapper]({{site.sourceurl}}/t3.py)
