Add guide link for dataframe

--- a/docs/_indicators/T3.md
+++ b/docs/_indicators/T3.md
@@ -14,7 +14,7 @@ layout: indicator
 
 | name | type | notes
 | -- |-- |--
-| `quotes` | Iterable[Quote] | Iterable(such as list or an object having `__iter__()`) of the [Quote class]({{site.baseurl}}/guide/#historical-quotes) or [its sub-class]({{site.baseurl}}/guide/#using-custom-quote-classes).
+| `quotes` | Iterable[Quote] | Iterable(such as list or an object having `__iter__()`) of the [Quote class]({{site.baseurl}}/guide/#historical-quotes) or [its sub-class]({{site.baseurl}}/guide/#using-custom-quote-classes). <br><span class='qna-dataframe'> • [Got in trouble with Pandas.dataframe?]({{site.baseurl}}/guide/#using-pandasdataframe) </span>
 | `lookback_periods` | int, *default 5* | Number of periods (`N`) for the EMA smoothing.  Must be greater than 0 and is usually less than 63.
 | `volume_factor` | float, *default 0.7* | Size of the Volume Factor.  Must be greater than 0 and is usually less than 2.
 
