Update docs for T3(rtn type)

--- a/docs/_indicators/T3.md
+++ b/docs/_indicators/T3.md
@@ -43,7 +43,7 @@ T3Results[T3Result]
 | name | type | notes
 | -- |-- |--
 | `date` | datetime | Date
-| `t3` | Decimal, Optional | T3 Moving Average
+| `t3` | float, Optional | T3 Moving Average
 
 ### Utilities
 
