--- a/docs/_indicators/T3.md
+++ b/docs/_indicators/T3.md
@@ -6,6 +6,7 @@ layout: indicator
 ---
 
 # {{ page.title }}
+
 <hr>
 
 ## **get_t3**(*quotes, lookback_periods=5, volume_factor=0.7*)
@@ -36,7 +37,7 @@ T3Results[T3Result]
 - It does not return a single incremental indicator value.
 - The first `6×(N-1)` periods will have `None` values since there's not enough data to calculate.
 
-:hourglass: **Convergence Warning**: The first `6×(N-1)+250` periods will have decreasing magnitude, convergence-related precision errors that can be as high as ~5% deviation in indicator values for earlier periods.
+> :hourglass: **Convergence warning**: The first `6×(N-1)+250` periods will have decreasing magnitude, convergence-related precision errors that can be as high as ~5% deviation in indicator values for earlier periods.
 
 ### T3Result
 
