--- a/docs/_indicators/T3.md
+++ b/docs/_indicators/T3.md
@@ -15,7 +15,7 @@ layout: indicator
 
 | name | type | notes
 | -- |-- |--
-| `quotes` | Iterable[Quote] | Iterable(such as list or an object having `__iter__()`) of the [Quote class]({{site.baseurl}}/guide/#historical-quotes) or [its sub-class]({{site.baseurl}}/guide/#using-custom-quote-classes). <br><span class='qna-dataframe'> • [Got in trouble with Pandas.dataframe?]({{site.baseurl}}/guide/#using-pandasdataframe) </span>
+| `quotes` | Iterable[Quote] | Iterable(such as list or an object having `__iter__()`) of the [Quote class]({{site.baseurl}}/guide/#historical-quotes) or [its sub-class]({{site.baseurl}}/guide/#using-custom-quote-classes). <br><span class='qna-dataframe'> • [Need help with pandas.DataFrame?]({{site.baseurl}}/guide/#using-pandasdataframe)</span>
 | `lookback_periods` | int, *default 5* | Number of periods (`N`) for the EMA smoothing.  Must be greater than 0 and is usually less than 63.
 | `volume_factor` | float, *default 0.7* | Size of the Volume Factor.  Must be greater than 0 and is usually less than 2.
 
@@ -66,7 +66,7 @@ quotes = get_history_from_feed("SPY")
 results = indicators.get_t3(quotes, 5, 0.7)
 ```
 
-## About: {{ page.title }}
+## About {{ page.title }}
 
 Created by Tim Tillson, the [T3](https://www.forexfactory.com/attachment.php/845855?attachmentid=845855&d=1322724313) indicator is a smooth moving average that reduces both lag and overshooting.
 [[Discuss] :speech_balloon:]({{site.github.base_repository_url}}/discussions/332 "Community discussion about this indicator")
