--- a/docs/_indicators/T3.md
+++ b/docs/_indicators/T3.md
@@ -75,5 +75,5 @@ Created by Tim Tillson, the [T3](https://www.forexfactory.com/attachment.php/845
 
 ### Sources
 
-- [C# core]({{site.base_sourceurl}}/s-z/T3/T3.cs)
+- [C# core]({{site.base_sourceurl}}/s-z/T3/T3.Series.cs)
 - [Python wrapper]({{site.sourceurl}}/t3.py)
