--- a/docs/_indicators/T3.md
+++ b/docs/_indicators/T3.md
@@ -69,11 +69,11 @@ results = indicators.get_t3(quotes, 5, 0.7)
 ## About {{ page.title }}
 
 Created by Tim Tillson, the [T3](https://www.forexfactory.com/attachment.php/845855?attachmentid=845855&d=1322724313) indicator is a smooth moving average that reduces both lag and overshooting.
-[[Discuss] :speech_balloon:]({{site.github.base_repository_url}}/discussions/332 "Community discussion about this indicator")
+[[Discuss] :speech_balloon:]({{site.dotnet.repo}}/discussions/332 "Community discussion about this indicator")
 
-![image]({{site.charturl}}/T3.png)
+![image]({{site.dotnet.charts}}/T3.png)
 
 ### Sources
 
-- [C# core]({{site.base_sourceurl}}/s-z/T3/T3.Series.cs)
+- [C# core]({{site.dotnet.src}}/s-z/T3/T3.Series.cs)
 - [Python wrapper]({{site.sourceurl}}/t3.py)
