--- a/docs/_indicators/T3.md
+++ b/docs/_indicators/T3.md
@@ -76,4 +76,4 @@ Created by Tim Tillson, the [T3](https://www.forexfactory.com/attachment.php/845
 ### Sources
 
 - [C# core]({{site.dotnet.src}}/s-z/T3/T3.Series.cs)
-- [Python wrapper]({{site.sourceurl}}/t3.py)
+- [Python wrapper]({{site.python.src}}/t3.py)
