--- a/docs/_indicators/T3.md
+++ b/docs/_indicators/T3.md
@@ -7,9 +7,7 @@ layout: indicator
 
 # {{ page.title }}
 
-<hr>
-
-## **get_t3**(*quotes, lookback_periods=5, volume_factor=0.7*)
+><span class="indicator-syntax">**get_t3**(*quotes, lookback_periods=5, volume_factor=0.7*)</span>
 
 ## Parameters
 
