--- a/docs/_indicators/T3.md
+++ b/docs/_indicators/T3.md
@@ -7,9 +7,7 @@ layout: indicator
 
 # {{ page.title }}
 
-<hr>
-
-## **get_t3**(*quotes, lookback_periods=5, volume_factor=0.7*)
+><span class="indicator-syntax">**get_t3**(*quotes, lookback_periods=5, volume_factor=0.7*)</span>
 
 ## Parameters
 
@@ -37,7 +35,7 @@ T3Results[T3Result]
 - It does not return a single incremental indicator value.
 - The first `6×(N-1)` periods will have `None` values since there's not enough data to calculate.
 
-> :hourglass: **Convergence warning**: The first `6×(N-1)+250` periods will have decreasing magnitude, convergence-related precision errors that can be as high as ~5% deviation in indicator values for earlier periods.
+>&#9886; **Convergence warning**: The first `6×(N-1)+250` periods will have decreasing magnitude, convergence-related precision errors that can be as high as ~5% deviation in indicator values for earlier periods.
 
 ### T3Result
 
@@ -69,11 +67,11 @@ results = indicators.get_t3(quotes, 5, 0.7)
 ## About {{ page.title }}
 
 Created by Tim Tillson, the [T3](https://www.forexfactory.com/attachment.php/845855?attachmentid=845855&d=1322724313) indicator is a smooth moving average that reduces both lag and overshooting.
-[[Discuss] :speech_balloon:]({{site.dotnet.repo}}/discussions/332 "Community discussion about this indicator")
+[[Discuss] &#128172;]({{site.dotnet.repo}}/discussions/332 "Community discussion about this indicator")
 
 ![image]({{site.dotnet.charts}}/T3.png)
 
 ### Sources
 
 - [C# core]({{site.dotnet.src}}/s-z/T3/T3.Series.cs)
-- [Python wrapper]({{site.sourceurl}}/t3.py)
+- [Python wrapper]({{site.python.src}}/t3.py)
