update "feed" ref in guide

--- a/docs/_indicators/T3.md
+++ b/docs/_indicators/T3.md
@@ -58,7 +58,7 @@ See [Utilities and Helpers]({{site.baseurl}}/utilities#utilities-for-indicator-r
 from stock_indicators import indicators
 
 # This method is NOT a part of the library.
-quotes = get_history_from_feed("SPY")
+quotes = get_historical_quotes("SPY")
 
 # Calculate 5-period T3
 results = indicators.get_t3(quotes, 5, 0.7)
